--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "googleapis": "^136.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
