--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "set NODE_OPTIONS=--experimental-vm-modules && jest --detectOpenHandles",
+    "test:routes": "jest test/routes/routes.test.js",
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
