--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.8",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "supertest": "^7.0.0"
