--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.8",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
